# blahajpi

./: .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  TESTING.md  TROUBLESHOOTING.md  column_config.conf  dev.py
.github/workflows/: static.yml
cli/: CMakeLists.txt
cli/include/bpicli/: commands.hpp  utils.hpp
cli/src/: commands.cpp  main.cpp
cli/src/commands/: analyze.cpp  batch.cpp  config.cpp  help.cpp  train.cpp  version.cpp  visualize.cpp
cli/src/utils/: string_utils.cpp
configs/: accurate_model.conf  column_config.conf  default.conf  fast_model.conf  production_model.conf
configs/cmake/: BlahajPIConfig.cmake.in
devcmd/: __init__.py  analyze.py  build.py  commands.py  common.py  demo.py  dev.py  docs.py  run.py  test.py
doxytheme/: Doxyfile  custom.css  doxytheme-content.css  doxytheme-custom.css  doxytheme-footer.html  doxytheme-header.css  doxytheme-header.html  doxytheme-main.css  doxytheme-main.js  doxytheme-mobile.css  doxytheme-sidebar.css  footer.html  header.html
lib/: CMakeLists.txt
lib/include/blahajpi/: analyzer.hpp  blahajpi.hpp  config.hpp
lib/include/blahajpi/evaluation/: metrics.hpp
lib/include/blahajpi/preprocessing/: text_processor.hpp  vectorizer.hpp
lib/include/blahajpi/utils/: dataset.hpp  word_cloud.hpp
lib/src/: analyzer.cpp  config.cpp
lib/src/evaluation/: metrics.cpp
lib/src/preprocessing/: text_processor.cpp  vectorizer.cpp
lib/src/utils/: analyzer.cpp  dataset.cpp  word_cloud.cpp
tests/: CMakeLists.txt
tests/e2e/: cli_runner.py  test_api.py
tests/integration/: api_integration_test.cpp  cli_integration_test.cpp
tests/unit/: analyzer_test.cpp  config_test.cpp  dataset_test.cpp  metrics_test.cpp  neural_network_test.cpp  sgd_classifier_test.cpp  text_processor_test.cpp  vectorizer_test.cpp  word_cloud_test.cpp
web/: README.md  index.html  main.js  site.webmanifest  styles.css
